Fix flickering

--- a/src/components/TdexOrderInput/style.scss
+++ b/src/components/TdexOrderInput/style.scss
@@ -13,10 +13,10 @@
     &.sub-row .balance {
       display: flex;
       flex-direction: column;
-      flex: 45%;
+      flex: 50%;
     }
     &.sub-row > span:nth-child(2) {
-      margin-left: 5vw;
+      margin-left: 3%;
       flex: 60%;
     }
     &.sub-row span {
